modifiche testi, ogproperty, menu e css

--- a/analisi_e_dati.html
+++ b/analisi_e_dati.html
@@ -5,10 +5,10 @@
 	<meta charset="utf-8">
 	<title>Controfinanziaria 2016 - Sbilanciamoci! > Come usare la spesa pubblica per i diritti, la pace, l'ambiente</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Controfinanziaria 2016 - Sbilanciamoci! > Come usare la spesa pubblica per i diritti, la pace, l'ambiente">
+  <meta name="description" content="Controfinanziaria 2016 - Sbilanciamoci! - Come usare la spesa pubblica per i diritti, la pace, l'ambiente">
   <meta name="author" content="Ondata.it - Sbilanciamoci.org">
-  <meta property="og:image" content="http://controfinanziaria.sbilanciamoci.org/images/sbilanciamoci_rapporto2016.jpg" />
-  <meta property="og:title" content="Controfinanziaria 2016 - Sbilanciamoci! > Come usare la spesa pubblica per i diritti, la pace, l'ambiente" />
+  <meta property="og:image" content="http://controfinanziaria.sbilanciamoci.org/images/sbilanciamoci_rapporto_2016.jpg" />
+  <meta property="og:title" content="Controfinanziaria 2016 - Sbilanciamoci! - Come usare la spesa pubblica per i diritti, la pace, l'ambiente" />
 
   <!--link rel="stylesheet/less" href="less/bootstrap.less" type="text/css" /-->
   <!--link rel="stylesheet/less" href="less/responsive.less" type="text/css" /-->
@@ -92,9 +92,9 @@
                                 <li><a href="./fisco_finanza.html">Fisco e finanza</a></li>
                                 <li><a href="./lavoro_reddito.html">Lavoro e reddito</a></li>
                                 <li><a href="./cultura_conoscenza.html">Cultura e conoscenza</a></li>
-                                <li><a href="./ambiente.html">Ambiente e Sviluppo sostenibile</a></li>
+                                <li><a href="./ambiente.html">Ambiente e sviluppo sostenibile</a></li>
                                 <li><a href="./welfare.html">Welfare e diritti</a></li>
-                                <li><a href="./pace_disarmo_cooperazione.html">Cooperazione, pace, disarmo</a></li>
+                                <li><a href="./pace_disarmo_cooperazione.html">Cooperazione, pace e disarmo</a></li>
                                 <li><a href="./altra_economia.html">Altraeconomia</a></li> 
                             </ul>
                     <li>
@@ -116,7 +116,6 @@
 </nav>
 </div>
 </div>
-
 <div id="main" class="container">
   <div class="row clearfix">
     <div class="col-md-12 column">
@@ -131,12 +130,87 @@
       Analisi e dati
           </h1>
         </div>
-          <p class="lead"></p>
+ <h2><strong>La manovra del Governo Renzi: sbilanciata, ma dalla parte sbagliata</strong> </h2>
+         <p class="lead">
+Anche quest’anno, la<strong> Legge di Stabilità 2016 non cambia verso</strong>: è <strong>iniqua</strong>, di <strong>corto respiro</strong> e <strong>priva di </strong>una<strong> strategia</strong> adeguata a rilanciare l’economia del Paese, una brutta copia della Legge di Stabilità 2015. Come quella dell’anno scorso, è presentata come una manovra espansiva. Oggi come allora l’obiettivo del raggiungimento del pareggio di bilancio è posticipato di un anno, questa volta al 2018. Ma più che rinunciare all’austerità, il Governo si limita a rallentare il passo: il deficit programmato è del 2,6% per il 2015 e del 2,2 o del 2,4% per il 2016, dunque comunque inferiore al limite del 3% imposto da Bruxelles.
+
+Anche quest’anno, e qui la continuità con il passato si allunga di molto, il Governo sceglie come priorità la riduzione delle tasse, omettendo di dire che si tradurrà anche in un ulteriore taglio dei servizi pubblici. Alla redistribuzione del patrimonio e del reddito il Governo preferisce di fatto la <strong>redistribuzione delle diseguaglianze</strong> <strong>a vantaggio di</strong> chi si trova nelle posizioni più privilegiate: <strong>ricchi e imprese</strong>. Né le assunzioni di circa 1.520 “eccellenze” tra docenti e ricercatori e la previsione di sgravi contributivi per i neo-assunti nel 2016 risolveranno il problema della disoccupazione giovanile ancora oggi al 40,5%.
+</p>
+
           </div>
         </div>
 
       </div>    
 
+
+<div id="grafici" class="container">
+            <div class="col-md-12 column">
+<h3><b>Come si impiega la spesa pubblica in Italia</b></h3>
+La gran parte della spesa pubblica italiana è assorbita dal debito (138 miliardi di euro), segue la spesa previdenziale (81 miliardi) e le relazioni con le autonomie locali (72 miliardi). Dei 32,7 miliardi destinati all’istruzione 31 sono per stipendi, mentre per l’istruzione universitaria la spesa è solo di 4,5 miliardi. La spesa sociale e per le politiche per la famiglia è pari a 24,1 miliardi. Spesi inoltre 16 miliardi per la difesa, 8,5 per l’ordine pubblico e la sicurezza, 1,7 miliardi per l’immigrazione e solo 660 milioni per lo sviluppo sostenibile e la tutela del territorio.
+<h2 align="left"><b>Pagamenti del Bilancio dello Stato per Missione. 1 gennaio-16 novembre 2015</b></h3>
+<i>grafico 1 immagine</i>
+
+<i>Fonte: MEF, RGS, 11 novembre 2015</i>
+<h3><b>Il crollo della domanda interna</b></h3>
+Nel corso del 2015 il fatturato della produzione industriale italiana mostra una timida ripresa, seppure nel complesso resti al di sotto dei valori del 2012. La migliore performance delle esportazioni riesce a compensare una domanda interna che rimane asfittica e non mostra alcun segnale di crescita.
+<p align="left"><b>Indice del fatturato dei prodotti industriali italiani. Anni 2007-2015</b></p>
+<p align="left"><b>grafico2 immagine</b></p>
+<i>Fonte: I.Stat</i>
+<h3><b>In Italia si guadagna poco...</b></h3>
+Le riforme del lavoro adottate negli ultimi anni hanno scelto come priorità quella di abbattere i costi del lavoro. Ma se confrontati con quelli tedeschi e francesi, i salari medi italiani risultano molto più bassi e, contrariamente a quanto è avvenuto negli altri due paesi, nel 2014 sono diminuiti rispetto al 2008.
+
+grafico 3
+<h3><b>...e si lavora tanto</b></h3>
+Spesso si sostiene che il lavoro italiano è poco produttivo e che in Italia si lavora meno che negli altri paesi. Ma rispetto ai lavoratori francesi e tedeschi quelli italiani lavorano di più: 1.481 ore in media l’anno rispetto alle 1.302 ore della Germania e alle 1.387 ore della Francia.
+
+<b>Grafico 4</b>
+<h3><b>Pochi posti letto negli ospedali italiani...</b></h3>
+Spesso si sostiene che l’Italia ha un sistema sanitario troppo “pesante”. A giudicare dal numero di posti letto ospedalieri ogni centomila abitanti sembrerebbe proprio di no: in Italia sono 342 rispetto agli 818 della Germania, ai 634 della Francia e ai 515 della media europea a 28 paesi.
+<h2 align="left"><b>Posti letto per 100.00 abitanti. Anno 2012</b></h3>
+grafico 5
+<h3><b>...si spende poco per la sanità pubblica</b></h3>
+Uno dei luoghi comuni più diffusi è che la spesa sanitaria italiana è molto più alta rispetto a quella degli altri paesi europei. Ma secondo l’Ocse nel 2012 la spesa media sanitaria per abitante italiana è molto più bassa (2.481 dollari) rispetto a quella di altri paesi considerati virtuosi come i Paesi Bassi (4.375 dollari), l’Austria (3.716 dollari), la Germania (3.691 dollari) o il Regno Unito (2.762 dollari).
+<h2 align="left"><b>Spesa sanitaria pubblica in alcuni paesi europei. Anno 2012 (dollari per abitante in parità di potere d’acquisto)</b></h3>
+grafico 6
+
+<i>Fonte: Istat - Noi Italia</i>
+<h3><b>Migrazioni: la retorica dell’"invasione"</b></h3>
+<span style="color: #000000;">Solo una piccola parte delle persone costrette a migrazioni forzate risiedono in Europa: solo 3,8 milioni tra rifugiati, richiedenti asilo, ritornati, sfollati interni e persone apolidi rispetto ai 54,7 milioni complessivi.</span>
+<h2 align="left"><b>Rifugiati, richiedenti asilo, sfollati interni (IDP’s), ritorni, persone apolidi per continente. Anno 2014.</b></h3>
+<span lang="en-GB"><i>Fonte: UNHCR - Global Trends 2014</i></span>
+<p lang="en-GB" align="justify"><b>grafico 7</b></p>
+
+<h3><b>Istruzione e formazione: latitano gli investimenti pubblici...</b></h3>
+L’Italia è uno dei paesi europei che spende meno per l’istruzione in rapporto al PIL: il 4,1% rispetto al 7% della Danimarca, al 6,8% del Portogallo, al 6,6% della Svezia, al 5,5% della Francia e del Regno Unito. Dedicano all’istruzione una quota più bassa del PIL rispetto a quella italiana solo la Spagna, la Bulgaria e la Romania.
+<h2 align="left"><b>Spesa pubblica per l’istruzione e la formazione nei paesi EU in percentuale sul PIL. Anno 2013</b></h3>
+GRAFICO 8
+
+<span lang="en-GB"><i>Fonte: Eurostat - Government finance statistics and EDP statistics</i></span>
+<h3><b>...e troppi giovani abbandonano gli studi</b></h3>
+I tagli alla spesa pubblica hanno colpito negli ultimi anni in particolare il mondo della scuola. Ciò accade mentre il tasso di abbandono scolastico è uno dei più alti in Europa: il 17% dei ragazzi non riesce a ultimare il ciclo scolastico: solo la Spagna, Malta, il Portogallo e la Romania fanno peggio dell’Italia in Europa.
+<h2 align="left"><b>Giovani che abbandonano prematuramente gli studi per sesso nei paesi UE. Anno 2013 (valori percentuali)</b></h3>
+grafico 9
+
+<i>Fonte: Istat - Noi Italia</i>
+<h3><b>Poca spesa su ricerca e sviluppo, scarsa competitività</b></h3>
+In un mercato globale competitivo come quello attuale, gli investimenti pubblici in ricerca e sviluppo sono fondamentali per rilanciare l’economia e l’occupazione, ma l’Italia sembra non averlo capito. È infatti uno dei paesi che investe di meno: l’1,3% del PIL rispetto al 3,4% della Finlandia, al 3,3% della Svezia, al 3% della Danimarca e al 2,9% della Germania.
+<h2 align="left"><b>Spesa per ricerca e sviluppo totale e sostenuta dalle imprese nei paesi UE in percentuale sul PIL. Anno 2012</b></h3>
+<i>Fonte: Istat - Noi Italia</i>
+
+<b>grafico 10</b>
+<h3><b>Tutti in macchina...</b></h3>
+L’inadeguatezza delle politiche pubbliche a sostegno della mobilità sostenibile e dei trasporti pubblici fa sì che l’Italia si collochi al vertice dei paesi europei che hanno un maggior numero di auto: ben 621 ogni mille abitanti. Solo il Lussemburgo fa peggio di noi in Europa, con 663 auto ogni mille abitanti.
+<h2 align="left"><b>Autovetture nei paesi UE per 1.000 abitanti. Anno 2012</b></h3>
+grafico 11
+
+<i>Fonte: Istat - Noi Italia</i>
+<h2 align="left"><b>...e tutto in discarica</b></h3>
+Riduzione della produzione, raccolta differenziata e riciclo dei rifiuti sono in buona parte del territorio Italiano ancora un obiettivo lontano. Quasi la metà 212 kg dei circa 491 kg rifiuti prodotti per abitante è ancora smaltita nelle discariche rispetto ai 3 kg della Germania e della Svezia, ai 5 del Belgio, agli 8 dei Paesi Bassi, ai 17 della Danimarca e ai 18 dell’Austria.
+<h2 align="left"><b>Rifiuti urbani smaltiti in discarica nei paesi UE. Anno 2012 (kg per abitante)</b></h3>
+grafico 12
+
+<i>Fonte: Istat - Noi Italia</i>
+</div></div>
 
       <div class="row clearfix">
         <div class="col-md-12 column">
