--- a/infografica.html
+++ b/infografica.html
@@ -5,10 +5,11 @@
 	<meta charset="utf-8">
 	<title>Controfinanziaria 2016 - Sbilanciamoci! > Come usare la spesa pubblica per i diritti, la pace, l'ambiente</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Controfinanziaria 2016 - Sbilanciamoci! > Come usare la spesa pubblica per i diritti, la pace, l'ambiente">
-  <meta name="author" content="Ondata.it - Sbilanciamoci.org">
-  <meta property="og:image" content="http://controfinanziaria.sbilanciamoci.org/images/sbilanciamoci_rapporto2016.jpg" />
+   <meta name="description" content="Controfinanziaria 2016 - Sbilanciamoci! > Come usare la spesa pubblica per i diritti, la pace, l'ambiente">
+  <meta name="author" content="Sbilanciamoci, Marianna Cosseddu, Ondata.it">
   <meta property="og:title" content="Controfinanziaria 2016 - Sbilanciamoci! > Come usare la spesa pubblica per i diritti, la pace, l'ambiente" />
+  <meta property="og:image" content="http://controfinanziaria.sbilanciamoci.org/images/sbilanciamoci_rapporto_2016.jpg" />
+<meta property="og:type" content="website" />
 
   <!--link rel="stylesheet/less" href="less/bootstrap.less" type="text/css" /-->
   <!--link rel="stylesheet/less" href="less/responsive.less" type="text/css" /-->
@@ -72,20 +73,16 @@
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> 
-          <!--
-          <a class="navbar-brand logo" href="./index.html">
-          <img style="max-width:100px; margin-top: 7px;"  src="./img/pitrusino.png">
-          </a>
-        -->
       </div>
 
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav dropdown">
+        <div class="container">
+              <ul class="nav navbar-nav dropdown">
                     <li>
                         <a href="./index.html">Home</a>
                     </li>
                     <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Proposte
+                        <a class="dropdown-toggle"  data-toggle="dropdown" href="#">Proposte
                         <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a href="./fisco_finanza.html">Fisco e finanza</a></li>
@@ -98,7 +95,7 @@
                             </ul>
                     <li class="active">
                         <a href="./infografica.html">Infografica</a>
-<li>
+<li >
                         <a href="./analisi_e_dati.html">Analisi e dati</a>
                     </li>                    </li>
 
@@ -108,19 +105,16 @@
          <li>
           <a href="http://Sbilanciamoci.org" target="_blank">Sbilanciamoci.org </a>
         </li>
-        </ul>
-  </div>
+        </ul>  </div>
 </div>
 
-</nav>
-</div>
+</nav></div>
 </div>
 
 <div id="main" class="container">
   <div class="row clearfix">
     <div class="col-md-12 column">
       <div class="jumbotron">
-        <br>
         <div class="page-header">
           <h1>
           <span class="fa-stack fa-4x">
@@ -129,8 +123,9 @@
           </span> 
           Infografica
           </h1>
-        </div><br>
-          <p class="lead">I <strong>diritti socialis non sono un lusso né una merce</strong>. Per contrastare le scelte di privatizzazione in corso da tempo, Sbilanciamoci! propone di integrare il Fondo Nazionale Politiche Sociali (1,164 miliardi) per riportarlo ai livelli del 2008, impiegare le risorse stanziate per il bonus bebè per ridurre le rette degli asili nido pubblici (costo zero), integrare il Fondo per la non autosufficienza (<mark>350 milioni</mark>) e quello per l’infanzia (<mark>15,2 milioni</mark>), varare misure per l’invecchiamento attivo (1 milione) e per l’inclusione attiva delle persone con disabilità (<mark>50 milioni</mark>). L’inserimento sociale dei detenuti potrebbe avvenire a costo zero. litiche di welfare generali, l’ondata di razzismo che sta travolgendo di nuovo il nostro paese.</p>
+        </div><p>L’infografica sottostante illustra in modo dinamico le proposte del Rapporto Sbilanciamoci! 2016. Sulla sinistra sono rappresentate le fonti di finanziamento attraverso le quali Sbilanciamoci! propone di finanziare le proposte di spesa illustrate nella parte destra dell’infografica.
+</p><p>I flussi centrali congiungono la colonna delle entrate e quella delle uscite evidenziando la destinazione delle risorse. Facendo scorrere il mouse sulle linee centrali è possibile inoltre visualizzare la destinazione delle diverse risorse reperite per ciascuna area tematica. L’ultima sezione a destra dell’infografica riepiloga in entrata e in uscita le proposte di Sbilanciamoci! per ciascuna area tematica.</p>
+
           </div>
         </div>
 
