--- a/ambiente.html
+++ b/ambiente.html
@@ -6,10 +6,9 @@
 	<title>Controfinanziaria 2016 - Sbilanciamoci! > Come usare la spesa pubblica per i diritti, la pace, l'ambiente > Ambiente</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Controfinanziaria 2016 - Sbilanciamoci! > Come usare la spesa pubblica per i diritti, la pace, l'ambiente">
-  <meta name="author" content="Ondata">
-  <meta property="og:image" content="http://ondata.github.io/sbilanciamoci-manovra2016/images/bgsbil2.jpg" />
+  <meta name="author" content="Ondata.it - Sbilanciamoci.org">
+  <meta property="og:image" content="http://controfinanziaria.sbilanciamoci.org/images/sbilanciamoci_rapporto_2016.jpg" />
   <meta property="og:title" content="Controfinanziaria 2016 - Sbilanciamoci! > Come usare la spesa pubblica per i diritti, la pace, l'ambiente" />
-
 
   <!--link rel="stylesheet/less" href="less/bootstrap.less" type="text/css" /-->
   <!--link rel="stylesheet/less" href="less/responsive.less" type="text/css" /-->
@@ -71,19 +70,15 @@
   <script type="text/javascript" src="./js/zorn/wz_tooltip.js"></script>
   <div class="row clearfix">
    <div class="container">
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> 
-          <!--
-          <a class="navbar-brand logo" href="./index.html">
-          <img style="max-width:100px; margin-top: 7px;"  src="./img/pitrusino.png">
-          </a>
-        -->
+        
       </div>
 
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <div class="container">
-              <ul class="nav navbar-nav dropdown">
+                   <ul class="nav navbar-nav dropdown">
                     <li>
                         <a href="./index.html">Home</a>
                     </li>
@@ -94,9 +89,9 @@
                                 <li><a href="./fisco_finanza.html">Fisco e finanza</a></li>
                                 <li><a href="./lavoro_reddito.html">Lavoro e reddito</a></li>
                                 <li><a href="./cultura_conoscenza.html">Cultura e conoscenza</a></li>
-                                <li><a href="./ambiente.html">Ambiente e Sviluppo sostenibile</a></li>
+                                <li><a href="./ambiente.html">Ambiente e sviluppo sostenibile</a></li>
                                 <li><a href="./welfare.html">Welfare e diritti</a></li>
-                                <li><a href="./pace_disarmo_cooperazione.html">Cooperazione, pace, disarmo</a></li>
+                                <li><a href="./pace_disarmo_cooperazione.html">Cooperazione, pace e disarmo</a></li>
                                 <li><a href="./altra_economia.html">Altraeconomia</a></li> 
                             </ul>
                     <li>
@@ -111,7 +106,11 @@
          <li>
           <a href="http://Sbilanciamoci.org" target="_blank">Sbilanciamoci.org </a>
         </li>
-        </ul>  </div>
+        </ul>
+  </div>
+</div>
+
+</nav>  </div>
 </div>
 
 </nav>
