--- a/tutte.html
+++ b/tutte.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Controfinanziaria 2016 - Sbilanciamoci! > Come usare la spesa pubblica per i diritti, la pace, l'ambiente">
   <meta name="author" content="Ondata.it - Sbilanciamoci.org">
-  <meta property="og:image" content="http://controfinanziaria.sbilanciamoci.org/images/sbilanciamoci_rapporto2016.jpg" />
+  <meta property="og:image" content="http://controfinanziaria.sbilanciamoci.org/images/sbilanciamoci_rapporto_2016.jpg" />
   <meta property="og:title" content="Controfinanziaria 2016 - Sbilanciamoci! > Come usare la spesa pubblica per i diritti, la pace, l'ambiente" />
 
   <!--link rel="stylesheet/less" href="less/bootstrap.less" type="text/css" /-->
@@ -109,9 +109,9 @@
                                 <li><a href="./fisco_finanza.html">Fisco e finanza</a></li>
                                 <li><a href="./lavoro_reddito.html">Lavoro e reddito</a></li>
                                 <li><a href="./cultura_conoscenza.html">Cultura e conoscenza</a></li>
-                                <li><a href="./ambiente.html">Ambiente e Sviluppo sostenibile</a></li>
+                                <li><a href="./ambiente.html">Ambiente e sviluppo sostenibile</a></li>
                                 <li><a href="./welfare.html">Welfare e diritti</a></li>
-                                <li><a href="./pace_disarmo_cooperazione.html">Cooperazione, pace, disarmo</a></li>
+                                <li><a href="./pace_disarmo_cooperazione.html">Cooperazione, pace e disarmo</a></li>
                                 <li><a href="./altra_economia.html">Altraeconomia</a></li> 
                             </ul>
                     <li>
@@ -134,20 +134,38 @@
     </div>
   </div>
 
-  <div id="main" class="container">
+ <div id="main" class="container">
+  <div class="row clearfix">
+    <div class="col-md-12 column">
+      <div class="jumbotron">
+      
+        <div class="page-header"> <h1>
+          <span class="fa-stack fa-4x tutto">
+            <i class="fa fa-circle fa-stack-2x text-primary"></i>
+            <i class="fa fa-balance-scale fa-stack-1x fa-inverse"></i>
+          </span> 
+       Tutte le proposte </h1></div>
+        </p>
+
+
+          </div>
+
+<div id="scaricatab">
+                <span class="fa-stack">
+                  <a href="/rapporto2016/Tavola_Finale_Rapporto_Sbilanciamoci_2016.jpg"> <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                <i class="fa fa-download  fa-stack-1x fa-inverse"></i></span></a> 
+             
+                <a href="/rapporto2016/Tavola_Finale_Rapporto_Sbilanciamoci_2016.jpg" style="text-decoration: none" class="scarica">Scarica la tavola finale delle proposte di Sbilanciamoci! per il 2016</a>
+            </div>  
+ 
+
+        </div>
+
+      </div>    
+
+
     <div class="row clearfix">
-      <div class="col-md-12 column">
-       <br> 
-       <br> 
-       <br> 
-       <br> 
-      </div>
-
-    </div>    
-
-
-    <div class="row clearfix">
-      <div class="col-md-12 column">
+      <div class="col-md-12 column tutte">
 
         <div ex:role="viewPanel" style="padding: 0in;">
 
