--- a/welfare.html
+++ b/welfare.html
@@ -5,10 +5,11 @@
 	<meta charset="utf-8">
 	<title>Controfinanziaria 2016 - Sbilanciamoci! > Come usare la spesa pubblica per i diritti, la pace, l'ambiente</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Controfinanziaria 2016 - Sbilanciamoci! > Come usare la spesa pubblica per i diritti, la pace, l'ambiente">
+   <meta name="description" content="Controfinanziaria 2016 - Sbilanciamoci! > Come usare la spesa pubblica per i diritti, la pace, l'ambiente">
   <meta name="author" content="Ondata.it - Sbilanciamoci.org">
-  <meta property="og:image" content="http://controfinanziaria.sbilanciamoci.org/images/sbilanciamoci_rapporto2016.jpg" />
   <meta property="og:title" content="Controfinanziaria 2016 - Sbilanciamoci! > Come usare la spesa pubblica per i diritti, la pace, l'ambiente" />
+  <meta property="og:image" content="http://controfinanziaria.sbilanciamoci.org/images/sbilanciamoci_rapporto_2016.jpg" />
+<meta property="og:type" content="website" />
 
 
   <!--link rel="stylesheet/less" href="less/bootstrap.less" type="text/css" /-->
@@ -95,9 +96,9 @@
                                 <li><a href="./fisco_finanza.html">Fisco e finanza</a></li>
                                 <li><a href="./lavoro_reddito.html">Lavoro e reddito</a></li>
                                 <li><a href="./cultura_conoscenza.html">Cultura e conoscenza</a></li>
-                                <li><a href="./ambiente.html">Ambiente e Sviluppo sostenibile</a></li>
+                                <li><a href="./ambiente.html">Ambiente e sviluppo sostenibile</a></li>
                                 <li><a href="./welfare.html">Welfare e diritti</a></li>
-                                <li><a href="./pace_disarmo_cooperazione.html">Cooperazione, pace, disarmo</a></li>
+                                <li><a href="./pace_disarmo_cooperazione.html">Cooperazione, pace e disarmo</a></li>
                                 <li><a href="./altra_economia.html">Altraeconomia</a></li> 
                             </ul>
                     <li>
